  warning and a request to upgrade.
* (bug 6440) Updated indexes to improve backlinking queries (links, templates, images)
* Switched 'anon-only' block mode to default for IP blocks
* (bug 3687) Add distinct heading for media files in category display.
* (bug 1578) Add different icons for external links to audio, video, or PDF in
  Monobook.
* Made autoblocks block account creation if the user block has that bit set.
* Add auto-summaries to blankings and large removals without summaries.

== Languages updated ==

* Bishnupriya Manipuri (bpy)
* German (de)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Kazakh (kk)
* Latin (la)
* Lithuanian (lt)
* Norwegian (no)
* Occitan (oc)
* Polish (pl)
* Portuguese (pt)
* Russian (ru)
* Slovak (sk)
* Upper Sorbian (hsb)

== Compatibility ==

MediaWiki 1.9 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

Some minor database changes have been made since 1.7:
* new fields and indexes on ipblocks
* index change on recentchanges

Several changes from 1.5 and 1.6 do require updates to be run on upgrade.
To ensure that these tables are filled with data, run refreshLinks.php after
the upgrade.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.



=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to